syntax = "proto3";

option go_package = "github.com/OpenSlides/openslides-manage-service/proto";

service Manage {
    rpc CheckServer(CheckServerRequest) returns (CheckServerResponse);
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
    rpc SetPassword(SetPasswordRequest) returns (SetPasswordResponse);
    rpc Config(ConfigRequest) returns (ConfigResponse);
}

message CheckServerRequest {
    bool skipClient = 1;
}

message CheckServerResponse {}

message CreateUserRequest {
    string username = 1;
    string password = 2;
    string organisation_management_level = 3;
}

message CreateUserResponse {
    int64 userID = 1;
}

message SetPasswordRequest {
    int64 userID = 1;
    string password = 2;
    bool only_update = 3;
}

message SetPasswordResponse {
    bool password_set = 1;
};

message ConfigRequest {
    enum Field {
        ELECTRONIC_VOTING = 0;
    }
    Field field = 1;
    string newValue = 2;
}

message ConfigResponse {
    string value = 1;
}
